k8s/07-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: practica-backend
  namespace: devops-lab
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: practica-backend
  template:
    metadata:
      labels:
        app: practica-backend
    spec:
      containers:
        - name: backend
          image: cinthya12/proyecto-integrador-backend:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
