k8s/10-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: practica-frontend
  namespace: devops-lab
spec:
  selector:
    app: practica-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
